Fixes maven install failure on Windows OS
Uses javax.xml.bind.DatatypeConverter instead of java.util.Base64 which prevents non Unix OS to wrongly parse UTF-8 key files.